packages/svelte/tests/compiler-errors/samples/else-before-closing-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected-token',
		message: 'Expected token {:then ...} or {:catch ...}',
		position: [24, 24]
	}
});
